# the-bridge

./: Cargo.toml  README.md
.github/workflows/: tests.yml
benches/: sink_stream.rs
examples/: server  server.rs
examples/esp32-c3/: Cargo.toml
examples/esp32-c3-example/: Cargo.toml
examples/esp32-c3-example/src/: main.rs
examples/esp32-c3/.cargo/: config.toml
examples/esp32-c3/.devcontainer/: devcontainer.json
examples/esp32-c3/docs/: README.md
examples/esp32-c3/scripts/: flash.sh
examples/esp32-c3/src/: main.rs
src/: captures.rs  codec.rs  cody_c.rs  demo.rs  embedded_io.rs  futures.rs  futures_io.rs  lib.rs  test.rs  tests.rs  tokio.rs
src/decode/: async_read.rs  error.rs  framed_read.rs  mod.rs
src/encode/: async_write.rs  error.rs  framed_write.rs  mod.rs
