[package]
name = "the-bridge"
version = "0.0.1"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Simple and Efficient Binary Protocol Bridge for std and no_std Environments"
repository = "https://github.com/JadKHaddad/the-bridge"
readme = "README.md"
keywords = ["protocol", "async", "no_std"]

[features]
default = ["tokio", "cody-c"]
std = []
tokio = ["std", "dep:tokio", "dep:tokio-util", "bincode/std"]
cody-c = ["dep:cody-c"]
defmt = ["dep:defmt"]
[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "derive",
] }
cody-c = { version = "0.1.0", optional = true, default-features = false }
tokio = { version = "1.37.0", optional = true, default-features = false }
tokio-util = { version = "0.7.12", optional = true, default-features = false, features = [
    "codec",
] }
tracing = { version = "0.1.40", optional = true }
log = { version = "0.4.20", optional = true }
defmt = { version = "0.3.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-test = "0.4.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.3"

# [[example]]
# name = "server"
# path = "examples/server.rs"
# required-features = ["tracing", "tokio", "demo"]
