[package]
name = "the-bridge"
version = "0.3.0"
edition = "2021"
authors = ["Jad K. Haddad <jadkhaddad@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Simple and Efficient Binary Protocol Bridge for std and no_std Environments"
repository = "https://github.com/JadKHaddad/the-bridge"
readme = "README.md"
keywords = ["protocol", "async", "no_std", "embedded"]

[features]
default = ["cody-c", "tokio"]
std = []
tokio = ["std", "dep:tokio-util", "bincode/std"]
cody-c = ["dep:cody-c"]
demo = []

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "derive",
] }
cody-c = { version = "0.3.1", optional = true, default-features = false }
tokio-util = { version = "0.7.12", optional = true, default-features = false, features = [
    "codec",
] }

[dev-dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "derive",
    "std",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
cody-c = { version = "0.3.1", default-features = false, features = ["tokio"] }
futures = "0.3.31"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tokio", "demo"]

[[bench]]
name = "sink_stream"
harness = false
required-features = ["cody-c", "tokio"]
# cargo bench --features "cody-c,tokio"
