[package]
name = "esp32-c3-example"
version = "0.1.0"
authors = ["JadKHaddad <jadkhaddad@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.20.1", features = ["esp32c3"] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.8.0", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "async",
    "embassy-net",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32c3"] }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embassy-executor = { version = "0.6.0", features = ["task-arena-size-40960"] }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { version = "0.1.0" }
static_cell = { version = "2.1.0", features = ["nightly"] }
the-bridge = { path = "../../", default-features = false, features = [
    "cody-c",
    "demo",
] }
cody-c = { version = "0.2.0", default-features = false, features = [
    "embedded-io-async",
] }
futures = { version = "0.3.31", default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
